--- a/blog.html
+++ b/blog.html
@@ -19,12 +19,12 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.d5de85c7.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.e0482577.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.34e02ce4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcc872af.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e7a236db.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.da2eab39.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1d0b9fbe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.c6788ba7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.a0f71b58.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.93f8a5d6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.94f7c113.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link.cdc7cac1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.0976737d.js">
@@ -108,7 +108,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ram9xa = {
+					__sveltekit_1fp83fj = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -117,10 +117,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{posts:[{title:"Improving Oh My Zsh Startup Time with Lazy Loading",date:new Date(1679529600000),tags:["DX","Code Snippet"],slug:"improving-shell-startup-with-lazy-loading"},{title:"Automatic Internal and External Links in SvelteKit",date:new Date(1627689600000),tags:["TypeScript","Svelte","SvelteKit","Code Snippet"],slug:"automatic-internal-external-links-in-sveltekit"},{title:"Use the Web Crypto API to Generate a Cryptographically Secure Password in the Browser and Node.js",date:new Date(1627430400000),tags:["JavaScript","Web Crypto API","Node.js"],featured:true,slug:"generate-password-in-browser-web-crypto-api"},{title:"Rename File Extensions with Node.js",date:new Date(1627344000000),tags:["Code Snippet","JavaScript","Node.js"],slug:"nodejs-rename-file-extensions"},{title:"Update Your Git Commit Email Address Before Pushing to Remote Repository",date:new Date(1626998400000),tags:["Git","Code Snippet"],slug:"git-rewrite-commit-email"},{title:"Use Firefox Bookmark Keywords to Quickly Get to Websites You Visit Often with Only 4 Keystrokes",date:new Date(1626912000000),tags:["Firefox","Productivity"],slug:"firefox-bookmark-keywords"}]},"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.e0482577.js"),
-						import("./_app/immutable/entry/app.da2eab39.js")
+						import("./_app/immutable/entry/start.34e02ce4.js"),
+						import("./_app/immutable/entry/app.c6788ba7.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1ram9xa.element, {
+						kit.start(app, __sveltekit_1fp83fj.element, {
 							node_ids: [0, 4],
 							data,
 							form: null,
