--- a/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
+++ b/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
@@ -19,12 +19,12 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="../../_app/immutable/assets/_layout.d5de85c7.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.e0482577.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.34e02ce4.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/index.dcc872af.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.e7a236db.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.da2eab39.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.1d0b9fbe.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.c6788ba7.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/_layout.svelte.a0f71b58.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/_layout.svelte.93f8a5d6.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/constants.94f7c113.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.cdc7cac1.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/utils.0976737d.js">
@@ -55,7 +55,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ram9xa = {
+					__sveltekit_1fp83fj = {
 						env: {},
 						base: new URL("../..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -64,10 +64,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{talk:"\u003C!DOCTYPE html\u003E\n\u003Chtml lang=\"en\"\u003E\n\u003Chead\u003E\n  \u003Cmeta charset=\"UTF-8\"\u003E\n  \u003Cmeta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"\u003E\n  \u003Clink rel=\"icon\" href=\"https:\u002F\u002Fcdn.jsdelivr.net\u002Fgh\u002Fslidevjs\u002Fslidev\u002Fassets\u002Ffavicon.png\"\u003E\n\u003Clink rel=\"stylesheet\" href=\"https:\u002F\u002Ffonts.googleapis.com\u002Fcss2?family=Helvetica+Neue:wght@200;400;600&display=swap\" type=\"text\u002Fcss\"\u003E\n  \u003Cscript type=\"module\" crossorigin src=\"\u002Ftalks\u002F2022-05-09-chalmers-entrepreneurship-inner-development\u002Fassets\u002Findex.030be689.js\"\u003E\u003C\u002Fscript\u003E\n  \u003Clink rel=\"stylesheet\" href=\"\u002Ftalks\u002F2022-05-09-chalmers-entrepreneurship-inner-development\u002Fassets\u002Findex.be5879df.css\"\u003E\n\u003C\u002Fhead\u003E\n\u003Cbody\u003E\n  \u003Cdiv id=\"app\"\u003E\u003C\u002Fdiv\u003E\n  \n  \n\u003C\u002Fbody\u003E\n\u003C\u002Fhtml\u003E\n"},"uses":{"params":["slug"]},"slash":"always"}];
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.e0482577.js"),
-						import("../../_app/immutable/entry/app.da2eab39.js")
+						import("../../_app/immutable/entry/start.34e02ce4.js"),
+						import("../../_app/immutable/entry/app.c6788ba7.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1ram9xa.element, {
+						kit.start(app, __sveltekit_1fp83fj.element, {
 							node_ids: [0, 8],
 							data,
 							form: null,
