--- a/talks.html
+++ b/talks.html
@@ -14,27 +14,27 @@
         />
         
 		<link href="./_app/immutable/assets/0.ogwFCQNU.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DBIrndmB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dsd7DJ__.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ChYPR4r1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BG9l5Rxp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/0WqV735r.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DLjrPPfV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BLimavPV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B0eWaQLx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D4OyXkj9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/4vAtHTY7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cua7UF5F.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Gm9wlhlI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D0iwhpLH.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CHjUEUL3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bf9TS7kp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D9Z9MdNV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DuAR_OEo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B_aWiqQn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dx9ojXbS.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BRWoR1B3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CbwLTG67.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B9bvo6AK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DbX0kdYX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CISuJOXI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/WC4cLCgU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C9rUmDpY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/92Z9xWeO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CQnEZjXw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.3jzOeWAF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CTo79YbN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CrNdSYcv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BPYAz16F.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DmustIFb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Da3CjJr0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Ctur7ITO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.-L-jxipw.js"><!--[--><!--[--><!--]--> <!--[--><meta name="robots" content="index,follow"/><!--]--> <!--[--><meta name="description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[--><link rel="canonical" href="http://sveltekit-prerender/talks"/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[--><!--[--><meta property="og:url" content="http://sveltekit-prerender/talks"/><!--]--> <!--[--><meta property="og:type" content="website"/> <!--[!--><!--[!--><!--[!--><!--[!--><!--]--><!--]--><!--]--><!--]--><!--]--> <!--[--><meta property="og:title" content="Talks"/><!--]--> <!--[--><meta property="og:description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!--]--><title>Talks · Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer</title>
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.dk9sTRD_.js"><!--[--><!--[--><!--]--> <!--[--><meta name="robots" content="index,follow"/><!--]--> <!--[--><meta name="description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[--><link rel="canonical" href="http://sveltekit-prerender/talks"/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[--><!--[--><meta property="og:url" content="http://sveltekit-prerender/talks"/><!--]--> <!--[--><meta property="og:type" content="website"/> <!--[!--><!--[!--><!--[!--><!--[!--><!--]--><!--]--><!--]--><!--]--><!--]--> <!--[--><meta property="og:title" content="Talks"/><!--]--> <!--[--><meta property="og:description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!--]--><title>Talks · Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer</title>
     </head>
 
     <body class="bg-honeydew" data-sveltekit-preload-data="hover">
@@ -42,15 +42,15 @@
 			
 			<script>
 				{
-					__sveltekit_bdlawg = {
+					__sveltekit_10actvg = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DBIrndmB.js"),
-						import("./_app/immutable/entry/app.CHjUEUL3.js")
+						import("./_app/immutable/entry/start.BLimavPV.js"),
+						import("./_app/immutable/entry/app.Bf9TS7kp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
