--- a/talks/2021-05-17-chalmers-sustainability-entrepreneurship/index.html
+++ b/talks/2021-05-17-chalmers-sustainability-entrepreneurship/index.html
@@ -14,28 +14,28 @@
         />
         
 		<link href="../../_app/immutable/assets/0.ogwFCQNU.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.DBIrndmB.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/Dsd7DJ__.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/ChYPR4r1.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/BG9l5Rxp.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/0WqV735r.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/DLjrPPfV.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.BLimavPV.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/B0eWaQLx.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/D4OyXkj9.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/4vAtHTY7.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Cua7UF5F.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Gm9wlhlI.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D0iwhpLH.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.CHjUEUL3.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.Bf9TS7kp.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D9Z9MdNV.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/DuAR_OEo.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/B_aWiqQn.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/Dx9ojXbS.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.BRWoR1B3.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/CbwLTG67.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/B9bvo6AK.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/DbX0kdYX.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/CISuJOXI.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/WC4cLCgU.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/C9rUmDpY.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/92Z9xWeO.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/CQnEZjXw.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.3jzOeWAF.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/CTo79YbN.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/CrNdSYcv.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/BPYAz16F.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/DmustIFb.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Da3CjJr0.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Ctur7ITO.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/8.C4CxseLh.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/CHQk1bIG.js"><!--[--><!---->
+		<link rel="modulepreload" href="../../_app/immutable/nodes/8.CqGN1xzd.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/BIIH5_Cv.js"><!--[--><!---->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/8b9eb19119592679c97707c257d88026.a02f38e2.png">
@@ -55,15 +55,15 @@
 			
 			<script>
 				{
-					__sveltekit_bdlawg = {
+					__sveltekit_10actvg = {
 						base: new URL("../..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.DBIrndmB.js"),
-						import("../../_app/immutable/entry/app.CHjUEUL3.js")
+						import("../../_app/immutable/entry/start.BLimavPV.js"),
+						import("../../_app/immutable/entry/app.Bf9TS7kp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
